--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOOJD7HVl20zSyqqeDJ5P4K",
+      "authorship_tag": "ABX9TyPUTj8rqA/s/v6UKD5aTuZm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/kleber293/calculo_numerico/blob/main/Calculo_Numerico.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0okkjS6imtMS"
+      },
+      "source": [
+        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
       ]
     },
     {
@@ -96,7 +105,7 @@
         "        else:\n",
         "            saida(conf,'\\u2081\\u2080', dec_inteiro(num), '\\u2082')"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,22 +114,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "id": "CKA5oT9it4a9",
-        "outputId": "1fb35c11-2ac0-4f60-c8fe-70ce8052632f"
+        "cellView": "form",
+        "outputId": "83f20df3-02b1-44a9-858e-ed65a517a1b2"
       },
       "source": [
         "#@markdown ### Convertendo um número **Binário** em **Decimal**\n",
-        "Numero_Binario =  10.111#@param\n",
+        "Numero_Binario =  10111#@param\n",
         "Convert_BxD(Numero_Binario, bin=True)"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(\u001b[1;32m10.111\u001b[)₂ ⟶ (\u001b[1;32m2.875\u001b[)₁₀\n"
+            "(\u001b[1;32m10111\u001b[)₂ ⟶ (\u001b[1;32m23\u001b[)₁₀\n"
           ]
         }
       ]
@@ -133,20 +142,170 @@
         },
         "cellView": "form",
         "id": "yN69942r1Zds",
-        "outputId": "9d41db5f-fb66-4227-a2b4-1fe965abeed5"
+        "outputId": "03051bb6-e275-46d2-da95-269d2f79d58a"
       },
       "source": [
         "#@markdown ### Convertendo um número **Decimal** em **Binário**\n",
-        "Numero_Decimal =  2.875#@param\n",
+        "Numero_Decimal =  13.25#@param\n",
         "Convert_BxD(Numero_Decimal, dec=True)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(\u001b[1;32m2.875\u001b[)₁₀ ⟶ (\u001b[1;32m10.111\u001b[)₂\n"
+            "(\u001b[1;32m13.25\u001b[)₁₀ ⟶ (\u001b[1;32m1101.01\u001b[)₂\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u2ACRTABnNin"
+      },
+      "source": [
+        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q4tLTbZbZIxx"
+      },
+      "source": [
+        "# Método de eliminação de Gauss ou Eliminação Gaussiana\n",
+        "\n",
+        "> $\\color{gray}{\\text{Gauss triângulação }}$\n",
+        "\n",
+        "Base: [Aqui](https://www.ufrgs.br/reamat/CalculoNumerico/livro-sci/sdsl-eliminacao_gaussiana.html):"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UyzWy5bMafL4"
+      },
+      "source": [
+        "Exercício de texte:\n",
+        "\n",
+        "\\begin{bmatrix}\n",
+        "1&1&1&1\\\\\n",
+        "4&4&2&2\\\\\n",
+        "2&1&-1&0\n",
+        "\\end{bmatrix}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m1u7WhDBSxFg"
+      },
+      "source": [
+        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iNEaDHCmSh2P"
+      },
+      "source": [
+        "# Método de eliminação de Gauss jordan\n",
+        "\n",
+        "> $\\color{gray}{\\text{método do pivotamento parcial}}$\n",
+        "\n",
+        "Base: [Aqui](https://www.ufrgs.br/reamat/CalculoNumerico/livro-sci/sdsl-eliminacao_gaussiana.html):"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HbrRZFO6TllS"
+      },
+      "source": [
+        "Exercício de texte:\n",
+        "\n",
+        "\\begin{bmatrix}\n",
+        "1&1&1&1\\\\\n",
+        "4&4&2&2\\\\\n",
+        "2&1&-1&0\n",
+        "\\end{bmatrix}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DeILhIq-O_TK"
+      },
+      "source": [
+        "m = [[1, 1, 1, 1],\n",
+        "     [4, 4, 2, 2],\n",
+        "     [2, 1, -1, 0]]"
+      ],
+      "execution_count": 466,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KgJgLGT6SfR6"
+      },
+      "source": [
+        "def pivotamento(hea):\n",
+        "    import numpy as np\n",
+        "    \n",
+        "    arr = np.array(hea, copy=True)\n",
+        "    \n",
+        "    def max_diagonal(arr):\n",
+        "        \n",
+        "        def permutation(arr, shift, end):\n",
+        "            arr = np.insert(arr, end, arr[shift], axis=0)\n",
+        "            finale = shift + 1 if shift > end else shift \n",
+        "            arr = np.delete(arr, finale, axis=0)\n",
+        "            return arr \n",
+        "\n",
+        "        for i in range(len(arr)):\n",
+        "            arr = permutation(\n",
+        "                arr,\n",
+        "                np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
+        "                i\n",
+        "            )\n",
+        "        return arr\n",
+        "\n",
+        "    arr = max_diagonal(arr)\n",
+        "    \n",
+        "    print(arr)"
+      ],
+      "execution_count": 471,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vy45p_oxOOGt",
+        "outputId": "8b4edab1-1bb9-4dab-9c09-d7c57ae892da"
+      },
+      "source": [
+        "print(m, '\\n')\n",
+        "\n",
+        "pivotamento(m)"
+      ],
+      "execution_count": 472,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] \n",
+            "\n",
+            "[[ 4  4  2  2]\n",
+            " [ 1  1  1  1]\n",
+            " [ 2  1 -1  0]]\n"
           ]
         }
       ]
