--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -5,8 +5,10 @@
     "colab": {
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPUTj8rqA/s/v6UKD5aTuZm",
+      "collapsed_sections": [
+        "Q4tLTbZbZIxx"
+      ],
+      "authorship_tag": "ABX9TyPYJ2D+ivcyr0Agg6n+htB/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,12 +113,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "CKA5oT9it4a9",
-        "cellView": "form",
-        "outputId": "83f20df3-02b1-44a9-858e-ed65a517a1b2"
+        "cellView": "form"
       },
       "source": [
         "#@markdown ### Convertendo um número **Binário** em **Decimal**\n",
@@ -124,25 +122,13 @@
         "Convert_BxD(Numero_Binario, bin=True)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(\u001b[1;32m10111\u001b[)₂ ⟶ (\u001b[1;32m23\u001b[)₁₀\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "cellView": "form",
-        "id": "yN69942r1Zds",
-        "outputId": "03051bb6-e275-46d2-da95-269d2f79d58a"
+        "id": "yN69942r1Zds"
       },
       "source": [
         "#@markdown ### Convertendo um número **Decimal** em **Binário**\n",
@@ -150,15 +136,7 @@
         "Convert_BxD(Numero_Decimal, dec=True)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(\u001b[1;32m13.25\u001b[)₁₀ ⟶ (\u001b[1;32m1101.01\u001b[)₂\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -228,9 +206,10 @@
         "Exercício de texte:\n",
         "\n",
         "\\begin{bmatrix}\n",
-        "1&1&1&1\\\\\n",
-        "4&4&2&2\\\\\n",
-        "2&1&-1&0\n",
+        "2&3&1&-1&6.9\\\\\n",
+        "-1&1&-4&1&-6.6\\\\\n",
+        "1&1&1&1&10.2\\\\\n",
+        "4&-5&1&-2&-12.3\n",
         "\\end{bmatrix}"
       ]
     },
@@ -240,11 +219,12 @@
         "id": "DeILhIq-O_TK"
       },
       "source": [
-        "m = [[1, 1, 1, 1],\n",
-        "     [4, 4, 2, 2],\n",
-        "     [2, 1, -1, 0]]"
+        "m = [[2, 3, 1, -1, 6.9],\n",
+        "     [-1, 1, -4, 1, -6.6],\n",
+        "     [1, 1, 1, 1, 10.2],\n",
+        "     [4, -5, 1, -2, -12.3]]"
       ],
-      "execution_count": 466,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -276,9 +256,36 @@
         "\n",
         "    arr = max_diagonal(arr)\n",
         "    \n",
-        "    print(arr)"
+        "    return arr"
       ],
-      "execution_count": 471,
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5F1YSaPaacBS"
+      },
+      "source": [
+        "def max_diagonal(arr):\n",
+        "\n",
+        "    import numpy as np\n",
+        "\n",
+        "    def permutation(arr, shift, end):\n",
+        "        arr = np.insert(arr, end, arr[shift], axis=0)\n",
+        "        finale = shift + 1 if shift > end else shift \n",
+        "        arr = np.delete(arr, finale, axis=0)\n",
+        "        return arr \n",
+        "\n",
+        "    for i in range(len(arr)):\n",
+        "        arr = permutation(\n",
+        "            arr,\n",
+        "            np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
+        "            i\n",
+        "        )\n",
+        "    return arr"
+      ],
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -287,25 +294,50 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Vy45p_oxOOGt",
-        "outputId": "8b4edab1-1bb9-4dab-9c09-d7c57ae892da"
+        "id": "BJIKZFgQTs4z",
+        "outputId": "2bc1fc53-3052-4f14-da24-37ebbb5e69d1"
       },
       "source": [
-        "print(m, '\\n')\n",
+        "p = pivotamento(m); print(f'\\033[34m{p}\\033['); print(f'\\033[31m{\"-=\"*20}\\033[')\n",
+        "print()\n",
         "\n",
-        "pivotamento(m)"
+        "for cm in range(len(p[0])-2):\n",
+        "    for l in range(len(p)-1-cm): # linha\n",
+        "        for c in range(len(p[0])): # coluna da linha\n",
+        "            if not c:\n",
+        "                v1, v2 = p[cm][cm], p[l+cm+1][cm]\n",
+        "                sinal = '-'\n",
+        "\n",
+        "            # print(f'{v2}*{p[cm][c]} {sinal} {v1}*{p[l+cm+1][c]}, L[{l+cm+1}][{cm}]')\n",
+        "            \n",
+        "            ms = v2*p[cm][c] - v1*p[l+cm+1][c]\n",
+        "\n",
+        "            p[l+cm+1][c] = ms\n",
+        "\n",
+        "            # print(p, '\\n')\n",
+        "        # print(f'\\033[31m{\"-=\"*20}\\033[')\n",
+        "    # print(f'\\033[32m{\"*\"*20}\\033[')\n",
+        "\n",
+        "    p = max_diagonal(p)\n",
+        "print(p, '\\n')"
       ],
-      "execution_count": 472,
+      "execution_count": 175,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] \n",
+            "\u001b[34m[[  4.   -5.    1.   -2.  -12.3]\n",
+            " [  2.    3.    1.   -1.    6.9]\n",
+            " [ -1.    1.   -4.    1.   -6.6]\n",
+            " [  1.    1.    1.    1.   10.2]]\u001b[\n",
+            "\u001b[31m-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\u001b[\n",
             "\n",
-            "[[ 4  4  2  2]\n",
-            " [ 1  1  1  1]\n",
-            " [ 2  1 -1  0]]\n"
+            "[[ 4.000000e+00 -5.000000e+00  1.000000e+00 -2.000000e+00 -1.230000e+01]\n",
+            " [ 0.000000e+00 -2.200000e+01 -2.000000e+00  0.000000e+00 -5.220000e+01]\n",
+            " [ 0.000000e+00  0.000000e+00  3.280000e+02 -4.400000e+01  7.992000e+02]\n",
+            " [-0.000000e+00 -0.000000e+00  0.000000e+00  4.540800e+04  1.907136e+05]] \n",
+            "\n"
           ]
         }
       ]
