--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "Q4tLTbZbZIxx"
       ],
-      "authorship_tag": "ABX9TyPYJ2D+ivcyr0Agg6n+htB/",
+      "authorship_tag": "ABX9TyNDRbtzE7ljk6AkHulRJfNG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,37 +256,47 @@
         "\n",
         "    arr = max_diagonal(arr)\n",
         "    \n",
+        "    for cm in range(len(arr[0])-2): # coluna da linha matriz\n",
+        "        for l in range(len(arr)-1-cm): # linha\n",
+        "            for c in range(len(arr[0])): # coluna da linha\n",
+        "                if not c:\n",
+        "                    v1, v2 = arr[cm][cm], arr[l+cm+1][cm]\n",
+        "\n",
+        "                ms = v2*arr[cm][c] - v1*arr[l+cm+1][c]\n",
+        "\n",
+        "                arr[l+cm+1][c] = ms\n",
+        "\n",
+        "        arr = max_diagonal(arr)\n",
         "    return arr"
       ],
-      "execution_count": 99,
+      "execution_count": 178,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5F1YSaPaacBS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1bcyXmnsksy0",
+        "outputId": "c2fd8c09-ba41-4bba-8ae6-47c63c545a4a"
       },
       "source": [
-        "def max_diagonal(arr):\n",
-        "\n",
-        "    import numpy as np\n",
-        "\n",
-        "    def permutation(arr, shift, end):\n",
-        "        arr = np.insert(arr, end, arr[shift], axis=0)\n",
-        "        finale = shift + 1 if shift > end else shift \n",
-        "        arr = np.delete(arr, finale, axis=0)\n",
-        "        return arr \n",
-        "\n",
-        "    for i in range(len(arr)):\n",
-        "        arr = permutation(\n",
-        "            arr,\n",
-        "            np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
-        "            i\n",
-        "        )\n",
-        "    return arr"
+        "print(pivotamento(m))"
       ],
-      "execution_count": 100,
-      "outputs": []
+      "execution_count": 180,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 4.000000e+00 -5.000000e+00  1.000000e+00 -2.000000e+00 -1.230000e+01]\n",
+            " [ 0.000000e+00 -2.200000e+01 -2.000000e+00  0.000000e+00 -5.220000e+01]\n",
+            " [ 0.000000e+00  0.000000e+00  3.280000e+02 -4.400000e+01  7.992000e+02]\n",
+            " [-0.000000e+00 -0.000000e+00  0.000000e+00  4.540800e+04  1.907136e+05]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
