--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -5,10 +5,8 @@
     "colab": {
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "Q4tLTbZbZIxx"
-      ],
-      "authorship_tag": "ABX9TyNDRbtzE7ljk6AkHulRJfNG",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMXzoWk8ejXTuztWv90pk6L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,31 +146,94 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "Q4tLTbZbZIxx"
+        "id": "KgJgLGT6SfR6",
+        "cellView": "form"
       },
       "source": [
-        "# Método de eliminação de Gauss ou Eliminação Gaussiana\n",
+        "#@markdown # Método de eliminação de Gauss ou Eliminação Gaussiana\n",
+        "#@markdown > $\\color{gray}{\\text{Gauss triângulação }}$\n",
         "\n",
-        "> $\\color{gray}{\\text{Gauss triângulação }}$\n",
+        "def pivotamento(hea):\n",
+        "    import numpy as np\n",
+        "    \n",
+        "    arr = np.array(hea, copy=True)\n",
+        "    \n",
+        "    def max_diagonal(arr):\n",
+        "        \n",
+        "        def permutation(arr, shift, end):\n",
+        "            arr = np.insert(arr, end, arr[shift], axis=0)\n",
+        "            finale = shift + 1 if shift > end else shift \n",
+        "            arr = np.delete(arr, finale, axis=0)\n",
+        "            return arr \n",
         "\n",
-        "Base: [Aqui](https://www.ufrgs.br/reamat/CalculoNumerico/livro-sci/sdsl-eliminacao_gaussiana.html):"
-      ]
+        "        for i in range(len(arr)):\n",
+        "            arr = permutation(\n",
+        "                arr,\n",
+        "                np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
+        "                i\n",
+        "            )\n",
+        "        return arr\n",
+        "\n",
+        "    arr = max_diagonal(arr)\n",
+        "\n",
+        "    for cm in range(len(arr[0])-2): # coluna da linha matriz\n",
+        "        for l in range(len(arr)-1-cm): # linha\n",
+        "            for c in range(len(arr[0])): # coluna da linha\n",
+        "                if not c:\n",
+        "                    v1, v2 = arr[cm][cm], arr[l+cm+1][cm]\n",
+        "\n",
+        "                ms = v2*arr[cm][c] - v1*arr[l+cm+1][c]\n",
+        "\n",
+        "                arr[l+cm+1][c] = ms\n",
+        "\n",
+        "        arr = max_diagonal(arr)\n",
+        "    return arr"
+      ],
+      "execution_count": 186,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "UyzWy5bMafL4"
+        "cellView": "form",
+        "id": "37rutuoUlahd"
       },
       "source": [
-        "Exercício de texte:\n",
-        "\n",
-        "\\begin{bmatrix}\n",
-        "1&1&1&1\\\\\n",
-        "4&4&2&2\\\\\n",
-        "2&1&-1&0\n",
-        "\\end{bmatrix}"
+        "m1 = [[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] #@param"
+      ],
+      "execution_count": 187,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "cellView": "form",
+        "id": "IPtq3_KzmWmt",
+        "outputId": "0bf36ef3-0e8f-4898-fd68-b5dd3dcb0eea"
+      },
+      "source": [
+        "triangular = m1 #@param\n",
+        "pivotamento(triangular)"
+      ],
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4, 4, 2, 2],\n",
+              "       [0, 4, 8, 4],\n",
+              "       [0, 0, 8, 8]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 188
+        }
       ]
     },
     {
@@ -226,131 +287,6 @@
       ],
       "execution_count": 98,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KgJgLGT6SfR6"
-      },
-      "source": [
-        "def pivotamento(hea):\n",
-        "    import numpy as np\n",
-        "    \n",
-        "    arr = np.array(hea, copy=True)\n",
-        "    \n",
-        "    def max_diagonal(arr):\n",
-        "        \n",
-        "        def permutation(arr, shift, end):\n",
-        "            arr = np.insert(arr, end, arr[shift], axis=0)\n",
-        "            finale = shift + 1 if shift > end else shift \n",
-        "            arr = np.delete(arr, finale, axis=0)\n",
-        "            return arr \n",
-        "\n",
-        "        for i in range(len(arr)):\n",
-        "            arr = permutation(\n",
-        "                arr,\n",
-        "                np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
-        "                i\n",
-        "            )\n",
-        "        return arr\n",
-        "\n",
-        "    arr = max_diagonal(arr)\n",
-        "    \n",
-        "    for cm in range(len(arr[0])-2): # coluna da linha matriz\n",
-        "        for l in range(len(arr)-1-cm): # linha\n",
-        "            for c in range(len(arr[0])): # coluna da linha\n",
-        "                if not c:\n",
-        "                    v1, v2 = arr[cm][cm], arr[l+cm+1][cm]\n",
-        "\n",
-        "                ms = v2*arr[cm][c] - v1*arr[l+cm+1][c]\n",
-        "\n",
-        "                arr[l+cm+1][c] = ms\n",
-        "\n",
-        "        arr = max_diagonal(arr)\n",
-        "    return arr"
-      ],
-      "execution_count": 178,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1bcyXmnsksy0",
-        "outputId": "c2fd8c09-ba41-4bba-8ae6-47c63c545a4a"
-      },
-      "source": [
-        "print(pivotamento(m))"
-      ],
-      "execution_count": 180,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[ 4.000000e+00 -5.000000e+00  1.000000e+00 -2.000000e+00 -1.230000e+01]\n",
-            " [ 0.000000e+00 -2.200000e+01 -2.000000e+00  0.000000e+00 -5.220000e+01]\n",
-            " [ 0.000000e+00  0.000000e+00  3.280000e+02 -4.400000e+01  7.992000e+02]\n",
-            " [-0.000000e+00 -0.000000e+00  0.000000e+00  4.540800e+04  1.907136e+05]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BJIKZFgQTs4z",
-        "outputId": "2bc1fc53-3052-4f14-da24-37ebbb5e69d1"
-      },
-      "source": [
-        "p = pivotamento(m); print(f'\\033[34m{p}\\033['); print(f'\\033[31m{\"-=\"*20}\\033[')\n",
-        "print()\n",
-        "\n",
-        "for cm in range(len(p[0])-2):\n",
-        "    for l in range(len(p)-1-cm): # linha\n",
-        "        for c in range(len(p[0])): # coluna da linha\n",
-        "            if not c:\n",
-        "                v1, v2 = p[cm][cm], p[l+cm+1][cm]\n",
-        "                sinal = '-'\n",
-        "\n",
-        "            # print(f'{v2}*{p[cm][c]} {sinal} {v1}*{p[l+cm+1][c]}, L[{l+cm+1}][{cm}]')\n",
-        "            \n",
-        "            ms = v2*p[cm][c] - v1*p[l+cm+1][c]\n",
-        "\n",
-        "            p[l+cm+1][c] = ms\n",
-        "\n",
-        "            # print(p, '\\n')\n",
-        "        # print(f'\\033[31m{\"-=\"*20}\\033[')\n",
-        "    # print(f'\\033[32m{\"*\"*20}\\033[')\n",
-        "\n",
-        "    p = max_diagonal(p)\n",
-        "print(p, '\\n')"
-      ],
-      "execution_count": 175,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[34m[[  4.   -5.    1.   -2.  -12.3]\n",
-            " [  2.    3.    1.   -1.    6.9]\n",
-            " [ -1.    1.   -4.    1.   -6.6]\n",
-            " [  1.    1.    1.    1.   10.2]]\u001b[\n",
-            "\u001b[31m-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\u001b[\n",
-            "\n",
-            "[[ 4.000000e+00 -5.000000e+00  1.000000e+00 -2.000000e+00 -1.230000e+01]\n",
-            " [ 0.000000e+00 -2.200000e+01 -2.000000e+00  0.000000e+00 -5.220000e+01]\n",
-            " [ 0.000000e+00  0.000000e+00  3.280000e+02 -4.400000e+01  7.992000e+02]\n",
-            " [-0.000000e+00 -0.000000e+00  0.000000e+00  4.540800e+04  1.907136e+05]] \n",
-            "\n"
-          ]
-        }
-      ]
     }
   ]
 }
