--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMXzoWk8ejXTuztWv90pk6L",
+      "authorship_tag": "ABX9TyMPdvG8cXBz1gsX1MwupQu1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,7 +203,7 @@
       "source": [
         "m1 = [[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] #@param"
       ],
-      "execution_count": 187,
+      "execution_count": 195,
       "outputs": []
     },
     {
@@ -214,25 +214,22 @@
         },
         "cellView": "form",
         "id": "IPtq3_KzmWmt",
-        "outputId": "0bf36ef3-0e8f-4898-fd68-b5dd3dcb0eea"
+        "outputId": "ef7ce17e-1ddd-4a9e-d81b-901563ee9d6f"
       },
       "source": [
         "triangular = m1 #@param\n",
-        "pivotamento(triangular)"
+        "print(pivotamento(triangular))"
       ],
-      "execution_count": 188,
+      "execution_count": 196,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[4, 4, 2, 2],\n",
-              "       [0, 4, 8, 4],\n",
-              "       [0, 0, 8, 8]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 188
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[4 4 2 2]\n",
+            " [0 4 8 4]\n",
+            " [0 0 8 8]]\n"
+          ]
         }
       ]
     },
@@ -253,9 +250,7 @@
       "source": [
         "# Método de eliminação de Gauss jordan\n",
         "\n",
-        "> $\\color{gray}{\\text{método do pivotamento parcial}}$\n",
-        "\n",
-        "Base: [Aqui](https://www.ufrgs.br/reamat/CalculoNumerico/livro-sci/sdsl-eliminacao_gaussiana.html):"
+        "> $\\color{gray}{\\text{método do pivotamento parcial}}$\n"
       ]
     },
     {
@@ -280,13 +275,150 @@
         "id": "DeILhIq-O_TK"
       },
       "source": [
-        "m = [[2, 3, 1, -1, 6.9],\n",
+        "m2 = [[2, 3, 1, -1, 6.9],\n",
         "     [-1, 1, -4, 1, -6.6],\n",
         "     [1, 1, 1, 1, 10.2],\n",
         "     [4, -5, 1, -2, -12.3]]"
       ],
-      "execution_count": 98,
+      "execution_count": 192,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6nRuSB4CnpqE",
+        "outputId": "6b1be3f4-221a-48e2-a6f3-4f8475bdec9f"
+      },
+      "source": [
+        "print(pivotamento(m2))"
+      ],
+      "execution_count": 193,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 4.000000e+00 -5.000000e+00  1.000000e+00 -2.000000e+00 -1.230000e+01]\n",
+            " [ 0.000000e+00 -2.200000e+01 -2.000000e+00  0.000000e+00 -5.220000e+01]\n",
+            " [ 0.000000e+00  0.000000e+00  3.280000e+02 -4.400000e+01  7.992000e+02]\n",
+            " [-0.000000e+00 -0.000000e+00  0.000000e+00  4.540800e+04  1.907136e+05]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7jr4NM4XqDGO"
+      },
+      "source": [
+        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "cellView": "form",
+        "id": "-BSy6gbmqMQG",
+        "outputId": "579df6b3-8d7d-432d-e5cd-28bf255f750e"
+      },
+      "source": [
+        "#@title\n",
+        "%%html\n",
+        "\n",
+        "<table style=\"white-space: nowrap; width: 0px;\" border=\"0\" cellspacing=\"0\">\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <td style=\"vertical-align: 0px;\">\n",
+        "        <img style=\"border-right: 3px solid #30D5C8; padding-right: 13px; height: 90px;\" src=\"https://i.pinimg.com/280x280_RS/79/42/c4/7942c414d01e7c8f8c179f905a5a86eb.jpg\"/></td>\n",
+        "        <td style=\"white-space: nowrap; font-family: Helvetica, Arial; padding-left: 11px; font-size: 12px; vertical-align: middle; width: 560px;\">\n",
+        "        <h1 style=\"white-space: nowrap; font-size: 14px; color: #30D5C8; line-height: 1; margin: 0 0 8px 0;\">\n",
+        "          <b>CLEBSON DOS SANTOS MARQUES</b>\n",
+        "        </h1>\n",
+        "\n",
+        "        <span style=\"color: #808080; data-contrast: none;\">\n",
+        "          Estudante do Curso de Licenciatura em F&iacute;sica pela Universidade Estadual Vale do Acara&uacute;<br />\n",
+        "        </span>\n",
+        "        <span style=\"white-space: nowrap; font-size: 12px; color: #30D5C8; line-height: 1px; margin: 0 0 8px 0;\" data-contrast=\"none\">\n",
+        "          <b>Tel.:</b>\n",
+        "        </span>\n",
+        "        <span style=\"color: #808080; data-contrast: none;\">(88) 9 9412 2413\n",
+        "          <br /><a style=\"color: #808080; data-contrast: none; text-decoration: none;\" href=\"mailto:klebersantosy@gmail.com\">klebersantosy@gmail.com</a><br />\n",
+        "          <a style=\"color: #808080; data-contrast: none; text-decoration: none;\" href=\"http://lattes.cnpq.br/9411163467458250\">http://lattes.cnpq.br/9411163467458250</a>\n",
+        "        </span>\n",
+        "\n",
+        "        <div style=\"white-space: nowrap; margin-top: 8px;\">\n",
+        "          <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://api.whatsapp.com/send?phone=558894122413\">\n",
+        "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://icon-library.com/images/icon-whatsapp-png/icon-whatsapp-png-2.jpg\" />\n",
+        "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://t.me/clebson_marques\">\n",
+        "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://www.freepnglogos.com/uploads/telegram-png/telegram-communications-icons-24.png\" />\n",
+        "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://www.passeidireto.com/perfil/371127-klebson-marques/\">\n",
+        "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://img.utdstc.com/icon/f63/09d/f6309d71c42e9f12c4aaf4800260f4c2ae9637ab4b148c381e8378e80ccce0e6:200\" />\n",
+        "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://github.com/kleber293\">\n",
+        "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://toppng.com/uploads/preview/octocat-filled-icon-github-icon-svg-11553443886f4krecogcv.png\" /></a>\n",
+        "        </div>\n",
+        "      </td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>"
+      ],
+      "execution_count": 205,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "<table style=\"white-space: nowrap; width: 0px;\" border=\"0\" cellspacing=\"0\">\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td style=\"vertical-align: 0px;\">\n",
+              "        <img style=\"border-right: 3px solid #30D5C8; padding-right: 13px; height: 90px;\" src=\"https://i.pinimg.com/280x280_RS/79/42/c4/7942c414d01e7c8f8c179f905a5a86eb.jpg\"/></td>\n",
+              "        <td style=\"white-space: nowrap; font-family: Helvetica, Arial; padding-left: 11px; font-size: 12px; vertical-align: middle; width: 560px;\">\n",
+              "        <h1 style=\"white-space: nowrap; font-size: 14px; color: #30D5C8; line-height: 1; margin: 0 0 8px 0;\">\n",
+              "          <b>CLEBSON DOS SANTOS MARQUES</b>\n",
+              "        </h1>\n",
+              "\n",
+              "        <span style=\"color: #808080; data-contrast: none;\">\n",
+              "          Estudante do Curso de Licenciatura em F&iacute;sica pela Universidade Estadual Vale do Acara&uacute;<br />\n",
+              "        </span>\n",
+              "        <span style=\"white-space: nowrap; font-size: 12px; color: #30D5C8; line-height: 1px; margin: 0 0 8px 0;\" data-contrast=\"none\">\n",
+              "          <b>Tel.:</b>\n",
+              "        </span>\n",
+              "        <span style=\"color: #808080; data-contrast: none;\">(88) 9 9412 2413\n",
+              "          <br /><a style=\"color: #808080; data-contrast: none; text-decoration: none;\" href=\"mailto:klebersantosy@gmail.com\">klebersantosy@gmail.com</a><br />\n",
+              "          <a style=\"color: #808080; data-contrast: none; text-decoration: none;\" href=\"http://lattes.cnpq.br/9411163467458250\">http://lattes.cnpq.br/9411163467458250</a>\n",
+              "        </span>\n",
+              "\n",
+              "        <div style=\"white-space: nowrap; margin-top: 8px;\">\n",
+              "          <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://api.whatsapp.com/send?phone=558894122413\">\n",
+              "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://icon-library.com/images/icon-whatsapp-png/icon-whatsapp-png-2.jpg\" />\n",
+              "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://t.me/clebson_marques\">\n",
+              "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://www.freepnglogos.com/uploads/telegram-png/telegram-communications-icons-24.png\" />\n",
+              "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://www.passeidireto.com/perfil/371127-klebson-marques/\">\n",
+              "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://img.utdstc.com/icon/f63/09d/f6309d71c42e9f12c4aaf4800260f4c2ae9637ab4b148c381e8378e80ccce0e6:200\" />\n",
+              "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://github.com/kleber293\">\n",
+              "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://toppng.com/uploads/preview/octocat-filled-icon-github-icon-svg-11553443886f4krecogcv.png\" /></a>\n",
+              "        </div>\n",
+              "      </td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
