--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMPdvG8cXBz1gsX1MwupQu1",
+      "authorship_tag": "ABX9TyP7mr6M3MCVUZY48rKu5GoC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,8 +148,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KgJgLGT6SfR6",
-        "cellView": "form"
+        "id": "KgJgLGT6SfR6"
       },
       "source": [
         "#@markdown # Método de eliminação de Gauss ou Eliminação Gaussiana\n",
@@ -178,7 +177,7 @@
         "\n",
         "    arr = max_diagonal(arr)\n",
         "\n",
-        "    for cm in range(len(arr[0])-2): # coluna da linha matriz\n",
+        "    for cm in range(len(arr[0])-2): # coluna da linha da matriz\n",
         "        for l in range(len(arr)-1-cm): # linha\n",
         "            for c in range(len(arr[0])): # coluna da linha\n",
         "                if not c:\n",
@@ -191,7 +190,7 @@
         "        arr = max_diagonal(arr)\n",
         "    return arr"
       ],
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +202,7 @@
       "source": [
         "m1 = [[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] #@param"
       ],
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -220,7 +219,7 @@
         "triangular = m1 #@param\n",
         "print(pivotamento(triangular))"
       ],
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,11 +275,11 @@
       },
       "source": [
         "m2 = [[2, 3, 1, -1, 6.9],\n",
-        "     [-1, 1, -4, 1, -6.6],\n",
-        "     [1, 1, 1, 1, 10.2],\n",
-        "     [4, -5, 1, -2, -12.3]]"
+        "      [-1, 1, -4, 1, -6.6],\n",
+        "      [1, 1, 1, 1, 10.2],\n",
+        "      [4, -5, 1, -2, -12.3]]"
       ],
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +294,7 @@
       "source": [
         "print(pivotamento(m2))"
       ],
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,9 +324,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 130
         },
-        "cellView": "form",
         "id": "-BSy6gbmqMQG",
-        "outputId": "579df6b3-8d7d-432d-e5cd-28bf255f750e"
+        "cellView": "form",
+        "outputId": "58b1b561-9484-4fd2-e600-60c328134e9b"
       },
       "source": [
         "#@title\n",
@@ -369,7 +368,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": 205,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
