--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP7mr6M3MCVUZY48rKu5GoC",
+      "authorship_tag": "ABX9TyN4/xglTYBbgYR0IuPG2n81",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,7 +112,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "CKA5oT9it4a9",
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "88ae0ab7-3ef6-4c0a-ecc9-466c27d71647"
       },
       "source": [
         "#@markdown ### Convertendo um número **Binário** em **Decimal**\n",
@@ -120,13 +124,25 @@
         "Convert_BxD(Numero_Binario, bin=True)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(\u001b[1;32m10111\u001b[)₂ ⟶ (\u001b[1;32m23\u001b[)₁₀\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "yN69942r1Zds"
+        "id": "yN69942r1Zds",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "95aea209-baa1-4ce2-8267-bfd4bbc1b703"
       },
       "source": [
         "#@markdown ### Convertendo um número **Decimal** em **Binário**\n",
@@ -134,7 +150,15 @@
         "Convert_BxD(Numero_Decimal, dec=True)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(\u001b[1;32m13.25\u001b[)₁₀ ⟶ (\u001b[1;32m1101.01\u001b[)₂\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -148,13 +172,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KgJgLGT6SfR6"
+        "id": "KgJgLGT6SfR6",
+        "cellView": "form"
       },
       "source": [
         "#@markdown # Método de eliminação de Gauss ou Eliminação Gaussiana\n",
         "#@markdown > $\\color{gray}{\\text{Gauss triângulação }}$\n",
         "\n",
-        "def pivotamento(hea):\n",
+        "def eliminacao_gauss(hea):\n",
         "    import numpy as np\n",
         "    \n",
         "    arr = np.array(hea, copy=True)\n",
@@ -188,19 +213,52 @@
         "                arr[l+cm+1][c] = ms\n",
         "\n",
         "        arr = max_diagonal(arr)\n",
-        "    return arr"
+        "    return arr        "
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "37rutuoUlahd"
+        "id": "4-hMYMpcl4S6"
+      },
+      "source": [
+        "#@markdown # Mostrando resultados de uma matriz triângular\n",
+        "def resultado(arr):\n",
+        "    '''Entre apenas com uma matriz triangular inferior'''\n",
+        "    c, l = len(arr), len(arr[0])\n",
+        "    \n",
+        "    for x in range(1, len(arr)+1):\n",
+        "        m1[len(m1)-x][len(m1)]/m1[len(m1)-1][len(m1)-x]\n",
+        "\n",
+        "    msg = f'M\\u1D40 = {_}'\n",
+        "\n",
+        "    return msg "
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "37rutuoUlahd",
+        "cellView": "form"
       },
       "source": [
         "m1 = [[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] #@param"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3xjyHzk3nkdH"
+      },
+      "source": [
+        "import numpy as np"
       ],
       "execution_count": null,
       "outputs": []
@@ -211,13 +269,42 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
-        "id": "IPtq3_KzmWmt",
-        "outputId": "ef7ce17e-1ddd-4a9e-d81b-901563ee9d6f"
+        "id": "sGqAZRv1AZdS",
+        "outputId": "3652367b-f762-4200-bb21-2af5a0ecce3d"
       },
       "source": [
-        "triangular = m1 #@param\n",
-        "print(pivotamento(triangular))"
+        "mm = eliminacao_gauss(m1)\n",
+        "mm"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4, 4, 2, 2],\n",
+              "       [0, 4, 8, 4],\n",
+              "       [0, 0, 8, 8]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hh5SKoBpEY5-",
+        "outputId": "a0a15f91-b59a-405a-ac7e-cde32c2fd47a"
+      },
+      "source": [
+        "for i, x in zip(mm, range(len(mm)-1, -1, -1)):\n",
+        "    \n",
+        "    print(x, i)\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -225,12 +312,133 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[4 4 2 2]\n",
-            " [0 4 8 4]\n",
-            " [0 0 8 8]]\n"
+            "2 [4 4 2 2]\n",
+            "1 [0 4 8 4]\n",
+            "0 [0 0 8 8]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3QjcV5fYk_va",
+        "outputId": "28ef7fd2-f145-40bb-c1cc-e13ba0d1c98a"
+      },
+      "source": [
+        "di = mm.diagonal()\n",
+        "np.where(mm[2] == di[len(di)-1])[0][0]"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "twdgHfWbeXTA",
+        "outputId": "09cc60c4-f40b-4120-8a9f-98f6f30e0e3b"
+      },
+      "source": [
+        "for i, k in zip(mm, range(len(mm))):\n",
+        "    print(i, k, end=\"\\n\\n\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4 4 2 2] 0\n",
+            "\n",
+            "[0 4 8 4] 1\n",
+            "\n",
+            "[0 0 8 8] 2\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EJoC2JbAFW5l",
+        "outputId": "0896cdd5-11c1-40c0-a03d-c4b310257173"
+      },
+      "source": [
+        "cle.insert(0, 2), cle"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(None, [2, 1, 2, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IPtq3_KzmWmt",
+        "outputId": "745e12c3-e7fb-454f-d749-3a4123b866d1"
+      },
+      "source": [
+        "triangular = m1 #@param\n",
+        "ma = eliminacao_gauss(triangular)\n",
+        "len(ma[0])"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kai9K93h6Uom"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -271,28 +479,55 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DeILhIq-O_TK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "muuk30as4uZ7",
+        "outputId": "ebf82231-246e-48d2-8f9e-c7013f206249"
       },
       "source": [
         "m2 = [[2, 3, 1, -1, 6.9],\n",
         "      [-1, 1, -4, 1, -6.6],\n",
         "      [1, 1, 1, 1, 10.2],\n",
-        "      [4, -5, 1, -2, -12.3]]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6nRuSB4CnpqE",
-        "outputId": "6b1be3f4-221a-48e2-a6f3-4f8475bdec9f"
-      },
-      "source": [
-        "print(pivotamento(m2))"
+        "      [4, -5, 1, -2, -12.3]]\n",
+        "\n",
+        "def gauss_jordan(hea):\n",
+        "    import numpy as np\n",
+        "    \n",
+        "    arr = np.array(hea, copy=True)\n",
+        "    \n",
+        "    def max_diagonal(arr):\n",
+        "        \n",
+        "        def permutation(arr, shift, end):\n",
+        "            arr = np.insert(arr, end, arr[shift], axis=0)\n",
+        "            finale = shift + 1 if shift > end else shift \n",
+        "            arr = np.delete(arr, finale, axis=0)\n",
+        "            return arr \n",
+        "\n",
+        "        for i in range(len(arr)):\n",
+        "            arr = permutation(\n",
+        "                arr,\n",
+        "                np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
+        "                i\n",
+        "            )\n",
+        "        return arr\n",
+        "\n",
+        "    arr = max_diagonal(arr)\n",
+        "\n",
+        "    for cm in range(len(arr[0])-2): # coluna da linha da matriz\n",
+        "        for l in range(len(arr)-1-cm): # linha\n",
+        "            for c in range(len(arr[0])): # coluna da linha\n",
+        "                if not c:\n",
+        "                    v1, v2 = arr[cm][cm], arr[l+cm+1][cm]\n",
+        "\n",
+        "                ms = v2*arr[cm][c] - v1*arr[l+cm+1][c]\n",
+        "\n",
+        "                arr[l+cm+1][c] = ms\n",
+        "\n",
+        "        arr = max_diagonal(arr)\n",
+        "    return arr\n",
+        "\n",
+        "print(gauss_jordan(m2))"
       ],
       "execution_count": null,
       "outputs": [
@@ -314,7 +549,8 @@
         "id": "7jr4NM4XqDGO"
       },
       "source": [
-        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
+        "<HR width=100% color=\"Turquoise\t\" align=left noshade>\n",
+        "<p><h1><font color=\"Turquoise\">Contatos</font><h1></p>"
       ]
     },
     {
@@ -368,7 +604,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
