--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN4/xglTYBbgYR0IuPG2n81",
+      "authorship_tag": "ABX9TyO/8wTloqFC+6r8JTuxr9vr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +105,7 @@
         "        else:\n",
         "            saida(conf,'\\u2081\\u2080', dec_inteiro(num), '\\u2082')"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -116,14 +116,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "88ae0ab7-3ef6-4c0a-ecc9-466c27d71647"
+        "outputId": "68a95f23-f535-48e1-bcce-a4010e5b9b1b"
       },
       "source": [
         "#@markdown ### Convertendo um número **Binário** em **Decimal**\n",
         "Numero_Binario =  10111#@param\n",
         "Convert_BxD(Numero_Binario, bin=True)"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,14 +142,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "95aea209-baa1-4ce2-8267-bfd4bbc1b703"
+        "outputId": "99ec85f2-5d10-43b5-eea3-556fa96a530f"
       },
       "source": [
         "#@markdown ### Convertendo um número **Decimal** em **Binário**\n",
         "Numero_Decimal =  13.25#@param\n",
         "Convert_BxD(Numero_Decimal, dec=True)"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
         "        arr = max_diagonal(arr)\n",
         "    return arr        "
       ],
-      "execution_count": 8,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
         "\n",
         "    return msg "
       ],
-      "execution_count": 7,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -249,48 +249,8 @@
       "source": [
         "m1 = [[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] #@param"
       ],
-      "execution_count": 9,
+      "execution_count": 40,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3xjyHzk3nkdH"
-      },
-      "source": [
-        "import numpy as np"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sGqAZRv1AZdS",
-        "outputId": "3652367b-f762-4200-bb21-2af5a0ecce3d"
-      },
-      "source": [
-        "mm = eliminacao_gauss(m1)\n",
-        "mm"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[4, 4, 2, 2],\n",
-              "       [0, 4, 8, 4],\n",
-              "       [0, 0, 8, 8]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 40
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -299,22 +259,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hh5SKoBpEY5-",
-        "outputId": "a0a15f91-b59a-405a-ac7e-cde32c2fd47a"
+        "outputId": "7198b2d5-10bd-4d01-c792-7452784b0dd5"
       },
       "source": [
-        "for i, x in zip(mm, range(len(mm)-1, -1, -1)):\n",
-        "    \n",
-        "    print(x, i)\n"
+        "import numpy as np\n",
+        "\n",
+        "mm = eliminacao_gauss(m1)\n",
+        "for i, x in zip(mm, range(len(mm))):\n",
+        "    print(x, i)"
       ],
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2 [4 4 2 2]\n",
+            "0 [4 4 2 2]\n",
             "1 [0 4 8 4]\n",
-            "0 [0 0 8 8]\n"
+            "2 [0 0 8 8]\n"
           ]
         }
       ]
@@ -326,119 +288,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3QjcV5fYk_va",
-        "outputId": "28ef7fd2-f145-40bb-c1cc-e13ba0d1c98a"
+        "outputId": "c7841d50-e971-4bf7-8c37-7ca19ad4df83"
       },
       "source": [
-        "di = mm.diagonal()\n",
-        "np.where(mm[2] == di[len(di)-1])[0][0]"
+        "di, n2 = mm.diagonal(), len(mm[0])-1\n",
+        "for x in range(len(mm)):\n",
+        "    n2, n = np.where(mm[1] == di[1])[0][0], 0\n",
+        "    for i in range(n1+1 , n2):\n",
+        "        print(i)\n",
+        "print(mm[1][n1], n, mm[1][n2])"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 100
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "twdgHfWbeXTA",
-        "outputId": "09cc60c4-f40b-4120-8a9f-98f6f30e0e3b"
-      },
-      "source": [
-        "for i, k in zip(mm, range(len(mm))):\n",
-        "    print(i, k, end=\"\\n\\n\")"
-      ],
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[4 4 2 2] 0\n",
-            "\n",
-            "[0 4 8 4] 1\n",
-            "\n",
-            "[0 0 8 8] 2\n",
-            "\n"
+            "4 0 4\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EJoC2JbAFW5l",
-        "outputId": "0896cdd5-11c1-40c0-a03d-c4b310257173"
-      },
-      "source": [
-        "cle.insert(0, 2), cle"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(None, [2, 1, 2, 2])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 96
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IPtq3_KzmWmt",
-        "outputId": "745e12c3-e7fb-454f-d749-3a4123b866d1"
-      },
-      "source": [
-        "triangular = m1 #@param\n",
-        "ma = eliminacao_gauss(triangular)\n",
-        "len(ma[0])"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kai9K93h6Uom"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -483,7 +352,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "muuk30as4uZ7",
-        "outputId": "ebf82231-246e-48d2-8f9e-c7013f206249"
+        "outputId": "6da2576e-c4d1-4b56-a3c5-b1c6fbed4bbc"
       },
       "source": [
         "m2 = [[2, 3, 1, -1, 6.9],\n",
@@ -529,7 +398,7 @@
         "\n",
         "print(gauss_jordan(m2))"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,11 +427,11 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 130
+          "height": 128
         },
         "id": "-BSy6gbmqMQG",
         "cellView": "form",
-        "outputId": "58b1b561-9484-4fd2-e600-60c328134e9b"
+        "outputId": "554eb080-a221-49ae-a580-42703457399f"
       },
       "source": [
         "#@title\n",
@@ -604,7 +473,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
