--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/8wTloqFC+6r8JTuxr9vr",
+      "authorship_tag": "ABX9TyMXfdnxJVTe5582LsbZBJ37",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -221,6 +221,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "37rutuoUlahd",
+        "cellView": "form"
+      },
+      "source": [
+        "m1 = [[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] #@param"
+      ],
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "cellView": "form",
         "id": "4-hMYMpcl4S6"
       },
@@ -237,19 +249,7 @@
         "\n",
         "    return msg "
       ],
-      "execution_count": 39,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "37rutuoUlahd",
-        "cellView": "form"
-      },
-      "source": [
-        "m1 = [[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] #@param"
-      ],
-      "execution_count": 40,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -259,24 +259,47 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hh5SKoBpEY5-",
-        "outputId": "7198b2d5-10bd-4d01-c792-7452784b0dd5"
+        "outputId": "80fca404-462b-4cb3-ce62-63ea590dd313"
       },
       "source": [
         "import numpy as np\n",
         "\n",
-        "mm = eliminacao_gauss(m1)\n",
-        "for i, x in zip(mm, range(len(mm))):\n",
-        "    print(x, i)"
+        "mm = np.array([[1, 2,  3,  4],[0, 5,  6,  7],[0, 0, 8, 9]])\n",
+        "for i, k in zip(range(len(mm)), mm):\n",
+        "    print(i, k)"
       ],
-      "execution_count": 76,
+      "execution_count": 191,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 [4 4 2 2]\n",
-            "1 [0 4 8 4]\n",
-            "2 [0 0 8 8]\n"
+            "0 [1 2 3 4]\n",
+            "1 [0 5 6 7]\n",
+            "2 [0 0 8 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CAC-Sxwa1PUh",
+        "outputId": "562ca89f-a063-465d-b99e-493786f196e0"
+      },
+      "source": [
+        "print(len(mm)-1, len(mm[0])-1)"
+      ],
+      "execution_count": 192,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 3\n"
           ]
         }
       ]
@@ -288,23 +311,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3QjcV5fYk_va",
-        "outputId": "c7841d50-e971-4bf7-8c37-7ca19ad4df83"
+        "outputId": "6df43c35-c875-485a-fcca-148354aa3da7"
       },
       "source": [
-        "di, n2 = mm.diagonal(), len(mm[0])-1\n",
-        "for x in range(len(mm)):\n",
-        "    n2, n = np.where(mm[1] == di[1])[0][0], 0\n",
-        "    for i in range(n1+1 , n2):\n",
-        "        print(i)\n",
-        "print(mm[1][n1], n, mm[1][n2])"
+        "mt = [mm[len(mm)-1][len(mm[0])-1]/mm.diagonal()[-1]]\n",
+        "for x in range(len(mm)-1, -1, -1):\n",
+        "    s = []; print(f\"\\033[35m{x}\\033[\")\n",
+        "    for i in range(x+1, len(mm)):        \n",
+        "        s.append(mm[x][i])\n",
+        "    print(s)"
       ],
-      "execution_count": 74,
+      "execution_count": 193,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4 0 4\n"
+            "\u001b[35m2\u001b[\n",
+            "[]\n",
+            "\u001b[35m1\u001b[\n",
+            "[6]\n",
+            "\u001b[35m0\u001b[\n",
+            "[2, 3]\n"
           ]
         }
       ]
